@@ -2,7 +2,7 @@ package com.navi.user.security.filter;
 
 import com.google.gson.Gson;
 import com.navi.common.response.ApiResponse;
-import com.navi.user.enums.UserRole;
+import com.navi.user.dto.JWTClaimDTO;
 import com.navi.user.security.util.JWTUtil;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
@@ -10,13 +10,13 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.Authentication;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.io.PrintWriter;
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 
 @RequiredArgsConstructor
@@ -26,6 +26,14 @@ public class JWTCheckFilter extends OncePerRequestFilter {
     @Override
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
             throws ServletException, IOException {
+
+        String header = request.getHeader("Authorization");
+
+        // 토큰이 없거나 Bearer 형식이 아닌 경우
+        if (header == null || !header.startsWith("Bearer ")) {
+            filterChain.doFilter(request, response);
+            return;
+        }
 
         String path = request.getRequestURI();
 
@@ -41,17 +49,15 @@ public class JWTCheckFilter extends OncePerRequestFilter {
             try {
                 // JWT 검증
                 String accessToken = authHeader.substring(7);
-                Map<String, Object> claims = jwtUtil.validateToken(accessToken);
 
-                // 사용자 식별 정보 추출
-                String username = (String) claims.get("username");
-                if (username == null) {
-                    username = (String) claims.get("provider"); // 소셜 로그인용 키
-                }
+                JWTClaimDTO claim = jwtUtil.validateAndParse(accessToken);
+                String role = claim.getPrimaryRole();
+                List<SimpleGrantedAuthority> authorities = List.of(new SimpleGrantedAuthority("ROLE_" + role));
 
-                username = (String) claims.get("id"); // 토큰에 넣은 사용자 id 클레임
                 UsernamePasswordAuthenticationToken auth =
-                        new UsernamePasswordAuthenticationToken(username, null, Collections.emptyList());
+                        new UsernamePasswordAuthenticationToken(
+                                claim.getId(), null, List.of(new SimpleGrantedAuthority(role))
+                        );
                 SecurityContextHolder.getContext().setAuthentication(auth);
 
             } catch (Exception e) {
@@ -82,7 +88,7 @@ public class JWTCheckFilter extends OncePerRequestFilter {
         // 로그인 없이 접근 가능한 페이지 건너뜀
         return path.startsWith("/api/users/signup")
                 || path.startsWith("/api/users/login")
-                || path.startsWith("/api/travels/")
+                || path.startsWith("/api/travel/")
                 || path.startsWith("/api/transports")
                 || path.startsWith("/api/accommodations")
                 || path.startsWith("/api/posts")
